# passman

./: .gitignore  app.py  data.py  pyproject.toml  readme.org  test_data.py
controller/: guiController.py  tuiController.py
imgs/: proto.drawio
model/: data.py
tests/: test_data.py
view/: gui.py  tui.py
